gdk: Ensure surface buffer scale is set

GDK will only set the buffer scale for the surfaces it creates when
attaching an image or when using an egl window window. Neither will
happen for native clutter applications, thus directly set the buffer
scale from clutter in that case (so it's in sync with the rendering
scale)

Signed-off-by: Sjoerd Simons <sjoerd@luon.net>

https://bugzilla.gnome.org/show_bug.cgi?id=769190